Document Admin API and add an API Key header
